--- a/index.html
+++ b/index.html
@@ -593,8 +593,8 @@
     <!-- Product Modal -->
     <div id="product-modal" class="fixed inset-0 bg-black bg-opacity-60 z-50 hidden">
         <div class="fixed inset-0 flex items-end md:items-center justify-center p-4">
-            <div class="bg-white rounded-t-2xl md:rounded-2xl w-full max-w-md max-h-[90vh] md:max-h-[80vh] overflow-hidden shadow-2xl transform transition-all duration-300">
-                <div class="overflow-y-auto max-h-full">
+            <div class="bg-white rounded-t-2xl md:rounded-2xl w-full max-w-md max-h-[90vh] md:max-h-[80vh] shadow-2xl transform transition-all duration-300 flex flex-col">
+                <div class="flex-1 overflow-y-auto">
                 <div class="p-4 md:p-6">
                     <div class="flex justify-between items-center mb-4 sticky top-0 bg-white z-10 pb-2">
                         <h3 id="modal-title" class="text-xl font-bold"></h3>
@@ -797,8 +797,8 @@
     <!-- Cart Modal -->
     <div id="cart-modal" class="fixed inset-0 bg-black bg-opacity-60 z-50 hidden">
         <div class="fixed inset-0 flex items-end md:items-center justify-center p-4">
-            <div class="bg-white rounded-t-2xl md:rounded-2xl w-full max-w-md max-h-[90vh] md:max-h-[80vh] overflow-hidden shadow-2xl transform transition-all duration-300">
-                <div class="overflow-y-auto max-h-full">
+            <div class="bg-white rounded-t-2xl md:rounded-2xl w-full max-w-md max-h-[90vh] md:max-h-[80vh] shadow-2xl transform transition-all duration-300 flex flex-col">
+                <div class="flex-1 overflow-y-auto">
                 <div class="p-4 md:p-6">
                     <div class="flex justify-between items-center mb-4 sticky top-0 bg-white z-10 pb-2">
                         <h3 class="text-xl font-bold">Seu Pedido</h3>
@@ -825,8 +825,8 @@
     <!-- Checkout Modal -->
     <div id="checkout-modal" class="fixed inset-0 bg-black bg-opacity-60 z-50 hidden">
         <div class="fixed inset-0 flex items-end md:items-center justify-center p-4">
-            <div class="bg-white rounded-t-2xl md:rounded-2xl w-full max-w-md max-h-[90vh] md:max-h-[80vh] overflow-hidden shadow-2xl transform transition-all duration-300">
-                <div class="overflow-y-auto max-h-full">
+            <div class="bg-white rounded-t-2xl md:rounded-2xl w-full max-w-md max-h-[90vh] md:max-h-[80vh] shadow-2xl transform transition-all duration-300 flex flex-col">
+                <div class="flex-1 overflow-y-auto">
                     <div class="p-4 md:p-6">
                         <div class="flex justify-between items-center mb-6 sticky top-0 bg-white z-10 pb-2">
                             <h3 class="text-xl font-bold">Finalizar Pedido</h3>
@@ -1607,5 +1607,5 @@
             });
         });
     </script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'97c0505742ece10b',t:'MTc1NzM1NDA5NS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'97c0539b5799e10b',t:'MTc1NzM1NDIyOS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
