--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
             <div class="grid grid-cols-2 gap-3 md:gap-4">
                 <div class="product-card bg-white rounded-lg shadow-md overflow-hidden cursor-pointer transform transition-all duration-200 hover:scale-105 active:scale-95" onclick="openProductModal('cheddar-burger-1')" role="button" tabindex="0" onkeydown="if(event.key==='Enter'||event.key===' ')openProductModal('cheddar-burger-1')">
                     <div class="relative">
-                        <img src="https://github.com/bravariburger/pedir/blob/main/fotos%20burguers%20-%20bravari%20burguer/Cheddar%20Burguer.jpg?raw=true" 
+                        <img src="https://github.com/bravariburger/inaugura-o/blob/main/burguers%20JPG/1.jpg?raw=true" 
                              alt="Cheddar Burguer" 
                              class="w-full h-32 object-cover"
                              loading="lazy"
@@ -435,7 +435,7 @@
                 </div>
 
                 <div class="product-card bg-white rounded-lg shadow-md overflow-hidden cursor-pointer" onclick="openProductModal('cheddar-bacon-burger-2')">
-                    <img src="https://github.com/bravariburger/pedir/blob/main/fotos%20burguers%20-%20bravari%20burguer/Cheddar%20Bacon%20Burguer.jpg?raw=true" 
+                    <img src="https://github.com/bravariburger/inaugura-o/blob/main/burguers%20JPG/2.jpg?raw=true" 
                          alt="Cheddar Bacon Burguer" 
                          class="w-full h-32 object-cover"
                          onerror="this.src=''; this.parentElement.querySelector('.no-image').style.display='flex';">
@@ -450,7 +450,7 @@
                 </div>
 
                 <div class="product-card bg-white rounded-lg shadow-md overflow-hidden cursor-pointer" onclick="openProductModal('bravari-burger-3')">
-                    <img src="https://github.com/bravariburger/pedir/blob/main/fotos%20burguers%20-%20bravari%20burguer/Bravari%20Burguer.jpg?raw=true" 
+                    <img src="https://github.com/bravariburger/inaugura-o/blob/main/burguers%20JPG/3.jpg?raw=true" 
                          alt="Bravari Burguer" 
                          class="w-full h-32 object-cover"
                          onerror="this.src=''; this.parentElement.querySelector('.no-image').style.display='flex';">
@@ -465,7 +465,7 @@
                 </div>
 
                 <div class="product-card bg-white rounded-lg shadow-md overflow-hidden cursor-pointer" onclick="openProductModal('cheddar-duplo-4')">
-                    <img src="https://github.com/bravariburger/pedir/blob/main/fotos%20burguers%20-%20bravari%20burguer/Cheddar%20Burguer%20Duplo.jpg?raw=true" 
+                    <img src="https://github.com/bravariburger/inaugura-o/blob/main/burguers%20JPG/4.jpg?raw=true" 
                          alt="Cheddar Burguer Duplo" 
                          class="w-full h-32 object-cover"
                          onerror="this.src=''; this.parentElement.querySelector('.no-image').style.display='flex';">
@@ -480,7 +480,7 @@
                 </div>
 
                 <div class="product-card bg-white rounded-lg shadow-md overflow-hidden cursor-pointer" onclick="openProductModal('cheddar-bacon-duplo-5')">
-                    <img src="https://github.com/bravariburger/pedir/blob/main/fotos%20burguers%20-%20bravari%20burguer/Cheddar%20Bacon%20Burguer%20Duplo.jpg?raw=true" 
+                    <img src="https://github.com/bravariburger/inaugura-o/blob/main/burguers%20JPG/5.jpg?raw=true" 
                          alt="Cheddar Bacon Burguer Duplo" 
                          class="w-full h-32 object-cover"
                          onerror="this.src=''; this.parentElement.querySelector('.no-image').style.display='flex';">
@@ -495,7 +495,7 @@
                 </div>
 
                 <div class="product-card bg-white rounded-lg shadow-md overflow-hidden cursor-pointer" onclick="openProductModal('bravari-duplo-6')">
-                    <img src="https://github.com/bravariburger/pedir/blob/main/fotos%20burguers%20-%20bravari%20burguer/Bravari%20Burguer%20Duplo.jpg?raw=true" 
+                    <img src="https://github.com/bravariburger/inaugura-o/blob/main/burguers%20JPG/6.jpg?raw=true" 
                          alt="Bravari Burguer Duplo" 
                          class="w-full h-32 object-cover"
                          onerror="this.src=''; this.parentElement.querySelector('.no-image').style.display='flex';">
@@ -510,7 +510,7 @@
                 </div>
 
                 <div class="product-card bg-white rounded-lg shadow-md overflow-hidden cursor-pointer" onclick="openProductModal('bravari-bacon-triplo-7')">
-                    <img src="https://github.com/bravariburger/pedir/blob/main/fotos%20burguers%20-%20bravari%20burguer/Bravari%20Bacon%20Triplo.jpg?raw=true" 
+                    <img src="https://github.com/bravariburger/inaugura-o/blob/main/burguers%20JPG/7.jpg?raw=true" 
                          alt="Bravari Bacon Triplo" 
                          class="w-full h-32 object-cover"
                          onerror="this.src=''; this.parentElement.querySelector('.no-image').style.display='flex';">
@@ -525,7 +525,7 @@
                 </div>
 
                 <div class="product-card bg-white rounded-lg shadow-md overflow-hidden cursor-pointer" onclick="openProductModal('bravari-ring-triplo-8')">
-                    <img src="https://github.com/bravariburger/pedir/blob/main/fotos%20burguers%20-%20bravari%20burguer/Bravari%20Ring%20Triplo.jpg?raw=true" 
+                    <img src="https://github.com/bravariburger/inaugura-o/blob/main/burguers%20JPG/8.jpg?raw=true" 
                          alt="Bravari Ring Triplo" 
                          class="w-full h-32 object-cover"
                          onerror="this.src=''; this.parentElement.querySelector('.no-image').style.display='flex';">
@@ -540,7 +540,7 @@
                 </div>
 
                 <div class="product-card bg-white rounded-lg shadow-md overflow-hidden cursor-pointer" onclick="openProductModal('bravari-ring-9')">
-                    <img src="https://github.com/bravariburger/pedir/blob/main/fotos%20burguers%20-%20bravari%20burguer/bravari%20burguer%20ring%20duplo.jpg?raw=true" 
+                    <img src="https://github.com/bravariburger/inaugura-o/blob/main/burguers%20JPG/9.jpg?raw=true" 
                          alt="Bravari Burguer Ring" 
                          class="w-full h-32 object-cover"
                          onerror="this.src=''; this.parentElement.querySelector('.no-image').style.display='flex';">
@@ -555,7 +555,7 @@
                 </div>
 
                 <div class="product-card bg-white rounded-lg shadow-md overflow-hidden cursor-pointer" onclick="openProductModal('vulcan-burger-10')">
-                    <img src="https://github.com/bravariburger/pedir/blob/main/fotos%20burguers%20-%20bravari%20burguer/bravari%20burguer%20ring%20duplo.jpg?raw=true" 
+                    <img src="https://github.com/bravariburger/inaugura-o/blob/main/burguers%20JPG/10.jpg?raw=true" 
                          alt="Vulcan Burguer" 
                          class="w-full h-32 object-cover"
                          onerror="this.src=''; this.parentElement.querySelector('.no-image').style.display='flex';">
@@ -570,7 +570,7 @@
                 </div>
 
                 <div class="product-card bg-white rounded-lg shadow-md overflow-hidden cursor-pointer" onclick="openProductModal('cream-cheese-11')">
-                    <img src="https://github.com/bravariburger/pedir/blob/main/fotos%20burguers%20-%20bravari%20burguer/bravari%20burguer%20ring%20duplo.jpg?raw=true" 
+                    <img src="https://github.com/bravariburger/inaugura-o/blob/main/burguers%20JPG/11.jpg?raw=true" 
                          alt="Cream Cheese Burguer" 
                          class="w-full h-32 object-cover"
                          onerror="this.src=''; this.parentElement.querySelector('.no-image').style.display='flex';">
@@ -585,7 +585,7 @@
                 </div>
 
                 <div class="product-card bg-white rounded-lg shadow-md overflow-hidden cursor-pointer" onclick="openProductModal('bravari-salada-12')">
-                    <img src="https://github.com/bravariburger/pedir/blob/main/fotos%20burguers%20-%20bravari%20burguer/Bravari%20Salada.jpg?raw=true" 
+                    <img src="https://github.com/bravariburger/inaugura-o/blob/main/burguers%20JPG/salada.jpg?raw=true" 
                          alt="Bravari Salada" 
                          class="w-full h-32 object-cover"
                          onerror="this.src=''; this.parentElement.querySelector('.no-image').style.display='flex';">
@@ -600,7 +600,7 @@
                 </div>
 
                 <div class="product-card bg-white rounded-lg shadow-md overflow-hidden cursor-pointer" onclick="openProductModal('cheddar-triplo-13')">
-                    <img src="https://github.com/bravariburger/pedir/blob/main/fotos%20burguers%20-%20bravari%20burguer/Cheddar%20Burguer%20Triplo.jpg?raw=true" 
+                    <img src="https://github.com/bravariburger/inaugura-o/blob/main/burguers%20JPG/12.jpg?raw=true" 
                          alt="Cheddar Burguer Triplo" 
                          class="w-full h-32 object-cover"
                          onerror="this.src=''; this.parentElement.querySelector('.no-image').style.display='flex';">
@@ -793,7 +793,7 @@
             </h2>
             <div class="grid grid-cols-2 gap-3 md:gap-4">
                 <div class="product-card bg-white rounded-lg shadow-md overflow-hidden cursor-pointer" onclick="openProductModal('combo-cheddar-1')">
-                    <img src="https://github.com/bravariburger/pedir/blob/main/fotos%20dos%20combos%20-%20bravari%20burguer/Cheddar%20Burguer.jpg?raw=true" 
+                    <img src="https://github.com/bravariburger/inaugura-o/blob/main/combos%20JPG/1.jpg?raw=true" 
                          alt="Combo Cheddar Burguer" 
                          class="w-full h-32 object-cover"
                          onerror="this.src=''; this.parentElement.querySelector('.no-image').style.display='flex';">
@@ -808,7 +808,7 @@
                 </div>
 
                 <div class="product-card bg-white rounded-lg shadow-md overflow-hidden cursor-pointer" onclick="openProductModal('combo-cheddar-bacon-2')">
-                    <img src="https://github.com/bravariburger/pedir/blob/main/fotos%20dos%20combos%20-%20bravari%20burguer/Cheddar%20Bacon%20Burguer.jpg?raw=true" 
+                    <img src="https://github.com/bravariburger/inaugura-o/blob/main/combos%20JPG/2.jpg?raw=true" 
                          alt="Combo Cheddar Bacon" 
                          class="w-full h-32 object-cover"
                          onerror="this.src=''; this.parentElement.querySelector('.no-image').style.display='flex';">
@@ -823,7 +823,7 @@
                 </div>
 
                 <div class="product-card bg-white rounded-lg shadow-md overflow-hidden cursor-pointer" onclick="openProductModal('combo-bravari-3')">
-                    <img src="https://github.com/bravariburger/pedir/blob/main/fotos%20dos%20combos%20-%20bravari%20burguer/Bravari%20Burguer.jpg?raw=true" 
+                    <img src="https://github.com/bravariburger/inaugura-o/blob/main/combos%20JPG/3.jpg?raw=true" 
                          alt="Combo Bravari Burguer" 
                          class="w-full h-32 object-cover"
                          onerror="this.src=''; this.parentElement.querySelector('.no-image').style.display='flex';">
@@ -3447,5 +3447,5 @@
             });
         });
     </script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'97c1acf106968a83',t:'MTc1NzM2ODM3NC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'97c1e6f5c651e10b',t:'MTc1NzM3MDc1MC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
