--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@
                 </div>
 
                 <div class="product-card bg-white rounded-lg shadow-md overflow-hidden cursor-pointer" onclick="openProductModal('combo-cheddar-triplo-13')">
-                    <img src="https://github.com/bravariburger/pedir/blob/main/fotos%20dos%20combos%20-%20bravari%20burguer/Cheddar%20Burguer%20Triplo.jpg?raw=true" 
+                    <img src="https://github.com/bravariburger/inaugura-o/blob/main/combos%20JPG/7.jpg?raw=true" 
                          alt="Combo Cheddar Triplo" 
                          class="w-full h-32 object-cover"
                          onerror="this.src=''; this.parentElement.querySelector('.no-image').style.display='flex';">
@@ -1738,7 +1738,7 @@
                 name: '🍔 Combo Cheddar Burguer Triplo',
                 price: 59.90,
                 description: 'Cheddar Burguer Triplo + Batata Frita + Refrigerante 350ml',
-                image: 'https://github.com/bravariburger/pedir/blob/main/fotos%20dos%20combos%20-%20bravari%20burguer/Cheddar%20Burguer%20Triplo.jpg?raw=true',
+                image: 'https://raw.githubusercontent.com/bravariburger/inaugura-o/refs/heads/main/combos%20JPG/7.jpg',
                 category: 'combo',
                 stock: 100
             }
@@ -3449,4 +3449,5 @@
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'97c1e6f5c651e10b',t:'MTc1NzM3MDc1MC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
 
